# sqs_email_sender

./: .gitignore  .prettierignore  .yarnrc.yml  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: cdk-test.yml  rust-test.yml
.vim-lsp-settings/: settings.json
email_broker/: Cargo.toml  README.md
email_broker/src/: attribute_value_wrapper.rs  config.rs  main.rs
email_lambda/: Cargo.toml
email_lambda/src/: de.rs  error.rs  main.rs
email_shared/: Cargo.toml
email_shared/src/: attribute_value_wrapper.rs  client.rs  dynamo.rs  email_message.rs  error.rs  lib.rs  queue.rs  sqs_email_messages.rs
email_shared/src/dynamo/: de.rs  dynamo.rs  error.rs  mod.rs
infrastructure/cdk/: .gitignore  package.json  tsconfig.json
infrastructure/cdk/lib/: database-construct.ts  database-stack.ts  key-construct.ts  parameters.ts  queue-construct.ts  queue-stack.ts  scalable-email-stack.ts  sqs-handler-construct.ts
infrastructure/cdk/test/: cdk.test.ts  database-construct.test.ts  database-stack.test.ts  key-construct.test.ts  queue-construct.test.ts  queue-stack.test.ts  runner.ts  scalable-email-stack.test.ts  sqs-handler-construct.test.ts
src/: attribute_value_wrapper.rs  config.rs  email_id_message.rs  email_message.rs  main.rs  queue.rs  sqs_email_message.rs  sqs_email_messages.rs
