[package]
name = "email_service"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0-beta.1"
rusoto_dynamodb = "0.43.0-beta.1"
rusoto_sqs = "0.43.0-beta.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
