[package]
name = "email_service"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rusoto_core = "0.43.0"
rusoto_dynamodb = "0.43.0"
rusoto_sqs = "0.43.0"
serde = "1.0"
serde_json = "1.0"
simplelog = "0.7"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
