[package]
name = "email_broker"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_shared = { version = "0.1.1", path = "../email_shared" }
futures = "0.3.13"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_sqs = "0.46.0"
serde = "1.0.124"
serde_json = "1.0.64"
structopt = "0.3.21"
tokio = { version = "1.8.4", features = ["macros"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.17", features = ["fmt", "json"] }
