[package]
name = "email_lambda"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_shared = { version = "0.1.0", path = "../email_shared" }
lazy_static = "1.4.0"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
rusoto_sqs = { version = "0.45.0", features = [ "deserialize_structs" ] }
serde = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "0.2.22", features = ["macros", "rt-core"] }
tracing = "0.1.21"
tracing-subscriber = { version = "0.2.14", features = ["fmt", "json"] }

[dependencies.lambda]
git = "https://github.com/awslabs/aws-lambda-rust-runtime/"
rev = "13aa8f01813e6949ca91aedafb286591fdf32217"
