[package]
name = "email_lambda"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_shared = { version = "0.1.0", path = "../email_shared" }
futures = "0.3.9"
lazy_static = "1.4.0"
netlify_lambda = "0.2.0"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_sqs = { version = "0.46.0", features = [ "deserialize_structs" ] }
serde = "1.0.118"
serde_json = "1.0.61"
tokio = { version = "1.0.1", features = ["macros"] }
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", features = ["fmt", "json"] }
