[package]
name = "email_shared"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
rusoto_sqs = "0.45.0"
serde = "1.0.117"
serde_json = "1.0.59"
thiserror = "1.0.22"
tracing = "0.1.22"
tracing-futures = "0.2.4"
