[package]
name = "email_shared"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.9"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_sqs = "0.46.0"
serde = "1.0.118"
serde_json = "1.0.61"
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-futures = "0.2.4"
